--- a/web/WEB-INF/template/top_index.xhtml
+++ b/web/WEB-INF/template/top_index.xhtml
@@ -9,87 +9,117 @@
     xmlns:p="http://primefaces.org/ui">
 
     <f:view locale="#{sesionGestec.idiomaSeleccionado}">
-    <div class="superior">  
-        <header>
-            <div class="container-fluid">
-                <div class="row">
-                    <div  class="col-xs-5 col-sm-3 col-md-2">
-                        <a href="#">
-                            <img class="img-responsive" src="resources/img/icono-gestec.png" alt="Gestec"/>
-                        </a>      
-                    </div>
-                    <div class="col-xs-7 col-sm-9 col-md-10 "  id="degrade">   
-                        <ul class="list-inline pull-right">
-                            <li class="hidden-xs">  <h6 class="recomiendanos">#{msjGestec.recomiendanos}</h6></li>
-                            <li><a class="social" href="https://www.facebook.com/">
-                                    <i class="fa fa-facebook-official fa-2x" ></i>             
-                                </a></li>
-                            <li> <a class="social" href="https://twitter.com/">
-                                    <i class="fa fa-twitter fa-2x" ></i>             
-                                </a></li>
-                            <li> <a class="social" href="https://plus.google.com/collections/featured">
-                                    <i class="fa fa-google-plus fa-2x" ></i>             
-                                </a>&nbsp;</li>
-                        </ul>           
-                    </div>
-                </div>  
-            </div>
-        </header>
-        <div class="menu"> 
-
-            <div class="container-fluid"> 
-                <div class="row">   
-                    <nav class="navbar navbar-inverse col-xs-6 col-sm-9 col-md-9" role="navigation">
-
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myInverseNavbar2" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+        <div class="superior">  
+            <header>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div  class="col-xs-5 col-sm-3 col-md-2">
+                            <a href="#">
+                                <img class="img-responsive" src="resources/img/icono-gestec.png" alt="Gestec"/>
+                            </a>      
                         </div>
-                        <div class="collapse navbar-collapse" id="myInverseNavbar2">
-                            <ul class="nav navbar-nav navbar-left">
-                               <li class="item">
-                                    <a href="#s2">#{msjGestec.queEsGestec}</a>
-                                </li>
-                                <li class="item">		
-                                    <a href="#s3">#{msjGestec.comoFunciona}</a>
-                                </li>
-                                <li class="item">		
-                                    <a href="#s4">#{msjGestec.beneficiosCliente}</a>
-                                </li>
-                                <li class="item">		
-                                    <a href="#s4">#{msjGestec.beneficiosTecnico}</a>
-                                </li>
-                                <li class="item">		
-                                    <a href="#s6">#{msjGestec.testimonios}</a>
-                                </li> 
-                                <li class="item" style="margin-right: 5px;"> 
-                            <span class="logout-spn" >
-            <h:form id="form-logout" prependId="false">
-                        <div class="btn-group">
-                    <button type="button" class="btn btn-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                            style="margin-top:-1px;">
-                        #{msjGestec[sesionGestec.idiomaSeleccionado.language]} <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <c:forEach items="#{sesionGestec.idiomasSoportados}" var="idioma">
-                            <li><h:commandLink actionListener="#{sesionGestec.cambiarIdioma(idioma)}" value="#{msjGestec[idioma.language]}"/></li>
-                        </c:forEach>
-                    </ul>
-                </div>
-                </h:form>
-
-        </span></li>
-                            </ul>
-                        </div>    
-
-                    </nav> 
-                    <div class="col-xs-6 col-sm-3 col-md-3">
-                        <a  href="#" type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary"><span class="fa fa-sign-in"></span>&nbsp;&nbsp;#{msjGestec.iniciarSesion}</a>&nbsp;&nbsp;&nbsp;&nbsp;
-
-                        <a  href="#" type="button" data-toggle="modal" data-target="#myModal2" class="btn btn-primary"><span class="fa fa-pencil"></span>&nbsp;&nbsp;#{msjGestec.registrar}</a>
+                        <div class="col-xs-7 col-sm-9 col-md-10 "  id="degrade">   
+                            <ul class="list-inline pull-right">
+                                <li class="hidden-xs">  <h6 class="recomiendanos">#{msjGestec.recomiendanos}</h6></li>
+                                <li><a class="social" href="https://www.facebook.com/">
+                                        <i class="fa fa-facebook-official fa-2x" ></i>             
+                                    </a></li>
+                                <li> <a class="social" href="https://twitter.com/">
+                                        <i class="fa fa-twitter fa-2x" ></i>             
+                                    </a></li>
+                                <li> <a class="social" href="https://plus.google.com/collections/featured">
+                                        <i class="fa fa-google-plus fa-2x" ></i>             
+                                    </a>&nbsp;</li>
+                            </ul>           
+                        </div>
                     </div>  
                 </div>
-            </div>
-        </div> 
-    </div>
+            </header>
+            <div class="menu"> 
+
+                <div class="container-fluid"> 
+                    <div class="row">   
+                        <nav class="navbar navbar-inverse col-xs-6 col-sm-9 col-md-9" role="navigation">
+
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myInverseNavbar2" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                            </div>
+                            <div class="collapse navbar-collapse" id="myInverseNavbar2">
+                                <ul class="nav navbar-nav navbar-left">
+                                    <li class="item">
+                                        <a href="#s2">#{msjGestec.queEsGestec}</a>
+                                    </li>
+                                    <li class="item">		
+                                        <a href="#s3">#{msjGestec.comoFunciona}</a>
+                                    </li>
+                                    <li class="item">		
+                                        <a href="#s4">#{msjGestec.beneficiosCliente}</a>
+                                    </li>
+                                    <li class="item">		
+                                        <a href="#s4">#{msjGestec.beneficiosTecnico}</a>
+                                    </li>
+                                    <li class="item">		
+                                        <a href="#s6">#{msjGestec.testimonios}</a>
+                                    </li> 
+                                    <li class="item" style="margin-right: 5px;"> 
+                                        <span class="logout-spn" >
+                                            <h:form id="form-logout" prependId="false">
+                                                <div class="btn-group">
+                                                    <button type="button" class="btn btn-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                                            style="margin-bottom: 10px;">
+                                                        <c:if test="#{msjGestec[sesionGestec.idiomaSeleccionado.language]=='Inglés' || 
+                                                                      msjGestec[sesionGestec.idiomaSeleccionado.language]=='English'}">
+                                                            <img src="#{request.contextPath}/faces/resources/img/en.png" alt="" 
+                                                                 style="height: 25px;width: 25px;"/>
+                                                        </c:if>
+                                                        <c:if test="#{msjGestec[sesionGestec.idiomaSeleccionado.language]=='Español' || 
+                                                                      msjGestec[sesionGestec.idiomaSeleccionado.language]=='Spanish'}">
+                                                            <img src="#{request.contextPath}/faces/resources/img/es.png" alt="" 
+                                                                 style="height: 25px;width: 25px;"/>
+                                                        </c:if>
+                                                        #{msjGestec[sesionGestec.idiomaSeleccionado.language]} 
+                                                        <span class="caret"></span>
+                                                    </button>
+                                                    <ul class="dropdown-menu">
+                                                        <c:forEach items="#{sesionGestec.idiomasSoportados}" var="idioma">
+                                                            <c:if test="#{msjGestec[idioma.language]=='Español' || 
+                                                                          msjGestec[idioma.language]=='Spanish'}">  
+                                                                <li>           
+                                                                    <h:commandLink actionListener="#{sesionGestec.cambiarIdioma(idioma)}">
+                                                                        <img src="#{request.contextPath}/faces/resources/img/es.png" alt="" 
+                                                                             style="height: 25px;width: 25px;"/>
+                                                                        &nbsp;#{msjGestec[idioma.language]}
+                                                                    </h:commandLink>
+                                                                </li>
+                                                            </c:if>
+                                                            <c:if test="#{msjGestec[idioma.language]=='English' ||
+                                                                          msjGestec[idioma.language]=='Inglés'}">  
+                                                                <li>           
+                                                                    <h:commandLink actionListener="#{sesionGestec.cambiarIdioma(idioma)}">
+                                                                        <img src="#{request.contextPath}/faces/resources/img/en.png" alt="" 
+                                                                             style="height: 25px;width: 25px;"/>
+                                                                        &nbsp;#{msjGestec[idioma.language]}
+                                                                    </h:commandLink>
+                                                                </li>
+                                                            </c:if>
+                                                        </c:forEach>
+                                                    </ul>
+                                                </div>
+                                            </h:form>
+
+                                        </span></li>
+                                </ul>
+                            </div>    
+
+                        </nav> 
+                        <div class="col-xs-6 col-sm-3 col-md-3">
+                            <a  href="#" type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary"><span class="fa fa-sign-in"></span>&nbsp;&nbsp;#{msjGestec.iniciarSesion}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+
+                            <a  href="#" type="button" data-toggle="modal" data-target="#myModal2" class="btn btn-primary"><span class="fa fa-pencil"></span>&nbsp;&nbsp;#{msjGestec.registrar}</a>
+                        </div>  
+                    </div>
+                </div>
+            </div> 
+        </div>
     </f:view>
 </ui:fragment>    
