--- a/web/WEB-INF/template/menu_admin.xhtml
+++ b/web/WEB-INF/template/menu_admin.xhtml
@@ -335,7 +335,7 @@
                                 &nbsp;#{msjGestec.tecnico}
                             </li>
                         </a>
-                        <a href="">
+                        <a href="#{request.contextPath}/faces/gestec/usuario/admin_msg.xhtml">
                             <span class="fa fa-envelope pull-left iconos-menu"></span> 
                             <li class="pull-left hidden-sm">
                                 &nbsp;#{msjGestec.mensajes}
