--- a/web/WEB-INF/template/top_index.xhtml
+++ b/web/WEB-INF/template/top_index.xhtml
@@ -115,7 +115,7 @@
                         <div class="col-xs-6 col-sm-3 col-md-3">
                             <a  href="#" type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary"><span class="fa fa-sign-in"></span>&nbsp;&nbsp;#{msjGestec.iniciarSesion}</a>&nbsp;&nbsp;&nbsp;&nbsp;
 
-                            <a  href="#" type="button" data-toggle="modal" data-target="#myModal2" class="btn btn-primary"><span class="fa fa-pencil"></span>&nbsp;&nbsp;#{msjGestec.registrar}</a>
+                            <a  href="#{request.contextPath}/faces/gestec/usuario/registrar_usuario.xhtml" type="button" class="btn btn-primary"><span class="fa fa-pencil"></span>&nbsp;&nbsp;#{msjGestec.registrar}</a>
                         </div>  
                     </div>
                 </div>
