--- a/web/resources/css/estilosPerfil.css
+++ b/web/resources/css/estilosPerfil.css
@@ -660,6 +660,9 @@ header {
     padding: 0;
 }
 
+// Registro User 
+
+
 
 @media only screen and (max-device-width: 992px) {
     header .header-top li {
