--- a/web/WEB-INF/template/template_principal.xhtml
+++ b/web/WEB-INF/template/template_principal.xhtml
@@ -10,7 +10,7 @@
         <ui:insert name="head2"/>
     </h:head>
 
-    <h:body>
+    <h:body onload="scrollDiv();">
 
 
         <div id="top">           
