--- a/web/WEB-INF/template/template_principal.xhtml
+++ b/web/WEB-INF/template/template_principal.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
 
     <h:head>
         #{sesionGestec.validaSesion()}
@@ -12,13 +13,13 @@
 
     <h:body onload="scrollDiv();">
 
-
         <div id="top">           
             <ui:insert name="top"> 
                 <ui:include src="/WEB-INF/template/top.xhtml"/>
             </ui:insert>
         </div>
-      
+
+
         <div id="menu">           
             <ui:insert name="menu"/>
         </div>
@@ -40,7 +41,7 @@
 
             </ui:insert>
         </div>
-   
+
 
         <div id="bottom">
             <ui:insert name="bottom">
