--- a/web/WEB-INF/template/menu_tecnico.xhtml
+++ b/web/WEB-INF/template/menu_tecnico.xhtml
@@ -115,11 +115,19 @@
 
                 <li class="dropdown">               
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <span class="top-label label label-success">5</span> 
+                        <span class="top-label label label-danger">#{sesionGestec.cantidadMensajes}</span> 
                         <i class="fa fa-envelope-o fa-2x contNot"></i>                      
                     </a>                
                     <ul class="dropdown-menu dropdown-messages" style="width: 300px;left: -150px;margin-top: 15px">              
 
+                        <div class="row" style="border-bottom: 1px solid #ccc;padding: 3px 0 1px 0;margin: 0">
+                            <h:form>
+                                <h:commandLink class="enlace-perfil pull-right" 
+                                               style="padding: 2px 5px 0 0" 
+                                               value=" marcar todas como leídas"/> 
+                            </h:form>
+                        </div>
+                        
                         <a href="#{request.contextPath}/faces/gestec/usuario/mensajes.xhtml" style="text-decoration: none">
                             <div class="notMensajesVistos">
                                 <div class="notificacionMensaje">
@@ -307,7 +315,7 @@
                             </c:forEach>
                         </c:if>
 
-                        <c:if test="#{sesionGestec.validarCantNotificaciones()}">
+                        <c:if test="#{sesionGestec.notCitas.size()==0}">
                             <center style="padding: 30px 0 5px 0">
                                 <span class="fa fa-newspaper-o" style="font-size: 150px"></span>
                                 <h4>No tienes novedades</h4>
