--- a/web/WEB-INF/template/menu_tecnico.xhtml
+++ b/web/WEB-INF/template/menu_tecnico.xhtml
@@ -315,7 +315,7 @@
                             </c:forEach>
                         </c:if>
 
-                        <c:if test="#{sesionGestec.notCitas.size()==0}">
+                        <c:if test="#{sesionGestec.notificacionesCitaUsuario.size()==0}">
                             <center style="padding: 30px 0 5px 0">
                                 <span class="fa fa-newspaper-o" style="font-size: 150px"></span>
                                 <h4>No tienes novedades</h4>
